; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_workqueue.c_svn_wc__wq_build_file_install.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_workqueue.c_svn_wc__wq_build_file_install.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OP_FILE_INSTALL = common dso_local global i8* null, align 8
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_wc__wq_build_file_install(i32** %0, i32* %1, i8* %2, i8* %3, i32 %4, i32 %5, i32* %6, i32* %7) #0 {
  %9 = alloca i32**, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i8*, align 8
  store i32** %0, i32*** %9, align 8
  store i32* %1, i32** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8* %3, i8** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  store i32* %7, i32** %16, align 8
  %19 = load i32*, i32** %15, align 8
  %20 = call i32* @svn_skel__make_empty_list(i32* %19)
  %21 = load i32**, i32*** %9, align 8
  store i32* %20, i32** %21, align 8
  %22 = load i8*, i8** %11, align 8
  %23 = load i32*, i32** %16, align 8
  %24 = call i8* @svn_dirent_dirname(i8* %22, i32* %23)
  store i8* %24, i8** %18, align 8
  %25 = load i8*, i8** %12, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %40

27:                                               ; preds = %8
  %28 = load i32*, i32** %10, align 8
  %29 = load i8*, i8** %18, align 8
  %30 = load i8*, i8** %12, align 8
  %31 = load i32*, i32** %15, align 8
  %32 = load i32*, i32** %16, align 8
  %33 = call i32 @svn_wc__db_to_relpath(i8** %17, i32* %28, i8* %29, i8* %30, i32* %31, i32* %32)
  %34 = call i32 @SVN_ERR(i32 %33)
  %35 = load i8*, i8** %17, align 8
  %36 = load i32**, i32*** %9, align 8
  %37 = load i32*, i32** %36, align 8
  %38 = load i32*, i32** %15, align 8
  %39 = call i32 @svn_skel__prepend_str(i8* %35, i32* %37, i32* %38)
  br label %40

40:                                               ; preds = %27, %8
  %41 = load i32*, i32** %10, align 8
  %42 = load i8*, i8** %18, align 8
  %43 = load i8*, i8** %11, align 8
  %44 = load i32*, i32** %15, align 8
  %45 = load i32*, i32** %16, align 8
  %46 = call i32 @svn_wc__db_to_relpath(i8** %17, i32* %41, i8* %42, i8* %43, i32* %44, i32* %45)
  %47 = call i32 @SVN_ERR(i32 %46)
  %48 = load i32, i32* %14, align 4
  %49 = load i32**, i32*** %9, align 8
  %50 = load i32*, i32** %49, align 8
  %51 = load i32*, i32** %15, align 8
  %52 = call i32 @svn_skel__prepend_int(i32 %48, i32* %50, i32* %51)
  %53 = load i32, i32* %13, align 4
  %54 = load i32**, i32*** %9, align 8
  %55 = load i32*, i32** %54, align 8
  %56 = load i32*, i32** %15, align 8
  %57 = call i32 @svn_skel__prepend_int(i32 %53, i32* %55, i32* %56)
  %58 = load i8*, i8** %17, align 8
  %59 = load i32**, i32*** %9, align 8
  %60 = load i32*, i32** %59, align 8
  %61 = load i32*, i32** %15, align 8
  %62 = call i32 @svn_skel__prepend_str(i8* %58, i32* %60, i32* %61)
  %63 = load i8*, i8** @OP_FILE_INSTALL, align 8
  %64 = load i32**, i32*** %9, align 8
  %65 = load i32*, i32** %64, align 8
  %66 = load i32*, i32** %15, align 8
  %67 = call i32 @svn_skel__prepend_str(i8* %63, i32* %65, i32* %66)
  %68 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %68
}

declare dso_local i32* @svn_skel__make_empty_list(i32*) #1

declare dso_local i8* @svn_dirent_dirname(i8*, i32*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_wc__db_to_relpath(i8**, i32*, i8*, i8*, i32*, i32*) #1

declare dso_local i32 @svn_skel__prepend_str(i8*, i32*, i32*) #1

declare dso_local i32 @svn_skel__prepend_int(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
